# CompileIQ

./: .gitattributes  .gitignore  .nspect-allowlist.toml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  pyrightconfig.json  pyrightconfig.md  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.md  3-question.md  4-documentation.md
.github/scripts/: smoke_test_compileiq_wheel.py
.github/workflows/: ci.yml  docs.yml  nightly.yml
agent-skills/: MANIFEST.md  README.md  install.sh  uninstall.sh
agent-skills/compileiq-author-objective/: SKILL.md
agent-skills/compileiq-booster-pack/: SKILL.md
agent-skills/compileiq-bootstrap/: SKILL.md
agent-skills/compileiq-debug/: SKILL.md
agent-skills/compileiq-run-search/: SKILL.md
agent-skills/compileiq-search-space/: SKILL.md
agent-skills/compileiq-validate-result/: SKILL.md
compileiq/: ciq.py  results.py  tracker.py  types.py  worker.py
compileiq/config/: const.py
compileiq/core/: core_comms.py  core_types.py  verify_core.py
compileiq/search_spaces/: base.py  compilers.py  manifest.py  models.py  resolver.py
compileiq/utils/: _setup_files.py  gpu.py  helpers.py  validation.py
dev/: build_booster_pack_release.py  build_manifest.py  build_search_space_release.py  build_search_space_release_notes.py  check-linux-core-abi.py  deploy_docs.py  filter-core-manifest.py  generate_manifest_schema.py  inspect_search_space_rate_limits.py  public_core_manifest.py  setup_search_space_release.py  update-core-binaries.sh  update_booster_pack_catalog.py  update_search_space_catalog.py  verify_booster_pack_release.py  verify_search_space_release.py  view_docs.sh
docs/: api.rst  benchmarking.md  booster_packs.md  compilers_overview.md  conf.py  experiment_tracking.md  flashinfer_booster.md  getting_started.md  index.rst  install.md  normalization.md  nvcc_example.md  primer.md  ptx_spill_example.md  search_space_release_testing.md  search_strategy.md  triton_example.md  workers.md  xgboost.md
docs/_templates/: switcher.json  versioning.html
examples/: ciq_xgboost.py  custom_worker.py  distributed.py  loguru_tracker.py  mlflow_tracker.py  multi_objective.py  nested_search_space.py  normalizing.py  single_objective.py
latest/: .buildinfo  api.html  benchmarking.html  booster_packs.html  compilers_overview.html  experiment_tracking.html  flashinfer_booster.html  genindex.html  getting_started.html  index.html  install.html  normalization.html  nvcc_example.html  objects.inv  ptx_spill_example.html  py-modindex.html  search.html  search_space_release_testing.html  search_strategy.html  searchindex.js  triton_example.html  workers.html  xgboost.html
latest/_sources/: compilers_overview.md.txt  xgboost.md.txt
release/booster-packs/: TODO.md
release/search-spaces/: manifest-source.yaml
schemas/: search-space-manifest-v1.schema.json
stable/: .buildinfo  api.html  benchmarking.html  compilers_overview.html  flashinfer_booster.html  getting_started.html  index.html  install.html  nvcc_example.html  ptx_spill_example.html  search_strategy.html  searchindex.js  triton_example.html  xgboost.html
stable/_sources/: api.rst.txt  benchmarking.md.txt  install.md.txt
tests/: conftest.py  utils.py
tests/compiler_ss/: validate_binary.py
tests/fuzz/: test_search_fuzz.py
tests/integration/: test_core_integration.py  test_search.py  test_search_space_resolution.py  test_tracking.py  test_worker.py
tests/unit/: test_booster_catalog_updater.py  test_booster_release_builder.py  test_booster_release_verifier.py  test_core_comms.py  test_core_types.py  test_diagnose_csv.py  (+21 more)
v1.0/: booster_packs.html  experiment_tracking.html  genindex.html  normalization.html  objects.inv  py-modindex.html  search.html  search_space_release_testing.html  triton_example.html  workers.html
(+39 files in other folders)
